package org.inputers

interface InputProvider {
    fun input(): String
}
