package org.interpretervisitors

import org.astnode.ASTNode
import org.astnode.ProgramNode
import org.astnode.astnodevisitor.VisitorHelper
import org.astnode.astnodevisitor.VisitorResult
import org.astnode.expressionnode.BinaryExpressionNode
import org.astnode.expressionnode.IdentifierNode
import org.astnode.expressionnode.LiteralNode
import org.astnode.expressionnode.LiteralValue
import org.astnode.statementnode.AssignmentNode
import org.astnode.statementnode.PrintStatementNode
import org.astnode.statementnode.VariableDeclarationNode
import org.inputers.InputProvider
import org.printers.Printer

class InterpreterVisitorV10(
    override val printer: Printer,
    override val inputProvider: InputProvider
) : InterpreterVisitor {
    private val symbolTable: MutableMap<String, VariableTripleData> = mutableMapOf()

    override fun visit(node: ASTNode): VisitorResult {
        return when (node) {
            is ProgramNode -> visitProgramNode(node)
            is AssignmentNode -> visitAssignmentNode(node)
            is PrintStatementNode -> visitPrintStatementNode(node)
            is VariableDeclarationNode -> visitVariableDeclarationNode(node)
            is LiteralNode -> visitLiteralNode(node)
            is IdentifierNode -> visitIdentifierNode(node)
            is BinaryExpressionNode -> visitBinaryExpressionNode(node)
            else -> throw UnsupportedOperationException("Unsupported node: ${node::class}")
        }
    }

    private fun visitProgramNode(node: ProgramNode): VisitorResult {
        val statements = node.statements
        statements.forEach { it.accept(this) }
        return VisitorResult.MapResult(symbolTable)
    }

    private fun visitAssignmentNode(node: AssignmentNode): VisitorResult {
        val variableIdentifier = node.identifier
        val value = node.value.accept(this) as VisitorResult.LiteralValueResult
        symbolTable[variableIdentifier.name] = symbolTable[variableIdentifier.name]!!
            .changeValue(value.value)
        return VisitorResult.MapResult(symbolTable)
    }

    private fun visitPrintStatementNode(node: PrintStatementNode): VisitorResult {
        val value = node.value.accept(this) as VisitorResult.LiteralValueResult
        when (value.value) {
            is LiteralValue.StringValue -> {
                val stringValue = (value.value as LiteralValue.StringValue).value
                val cleanedStringValue = stringValue
                    .replace("'", "")
                    .replace("\"", "")
                printer.print(cleanedStringValue)
            }
            is LiteralValue.NumberValue -> {
                printer.print((value.value as LiteralValue.NumberValue).value.toString())
            }
            is LiteralValue.BooleanValue -> {
                printer.print((value.value as LiteralValue.BooleanValue).value.toString())
            }

            else -> {
                throw Exception("Unsupported print value type at ${node.location}")
            }
        }
        return VisitorResult.Empty
    }

    private fun visitVariableDeclarationNode(node: VariableDeclarationNode): VisitorResult {
        val variableIdentifier = node.identifier
        val value = node.init.accept(this) as VisitorResult.LiteralValueResult
        val tripleData = VariableTripleData(
            variableIdentifier.kind,
            variableIdentifier.dataType,
            value.value
        )
        symbolTable[variableIdentifier.name] = tripleData
        return VisitorResult.MapResult(symbolTable)
    }

    private fun visitLiteralNode(node: LiteralNode): VisitorResult {
        return VisitorResult.LiteralValueResult(node.value)
    }

    private fun visitIdentifierNode(node: IdentifierNode): VisitorResult {
        val value = symbolTable[node.name]?.literalValue
        if (value != null) {
            return when (value) {
                is LiteralValue.StringValue -> VisitorResult.LiteralValueResult(value)
                is LiteralValue.NumberValue -> VisitorResult.LiteralValueResult(value)
                is LiteralValue.BooleanValue -> VisitorResult.LiteralValueResult(value)
                is LiteralValue.NullValue -> VisitorResult.LiteralValueResult(value)
                else -> {
                    throw Exception("Unsupported value type at ${node.location}")
                }
            }
        } else {
            throw Exception("Variable ${node.name} not declared")
        }
    }

    private fun visitBinaryExpressionNode(node: BinaryExpressionNode): VisitorResult {
        val leftResult = node.left.accept(this) as VisitorResult.LiteralValueResult
        val rightResult = node.right.accept(this) as VisitorResult.LiteralValueResult

        val leftValue = leftResult.value
        val rightValue = rightResult.value

        val resultLiteralValue: LiteralValue = VisitorHelper().evaluateBinaryExpression(
            leftValue,
            rightValue,
            node.operator
        )

        return VisitorResult.LiteralValueResult(resultLiteralValue)
    }
}
